Fixed: in IE11 body.onload was invisible

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,7 +22,7 @@
 html, body { height: 100%; }
 body {
   display: none;
-  &.loaded { display: initial; }
+  &.loaded { display: block; display: initial; }
 }
 
 p {
